# survey-api

./: .env.test  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  pyproject.toml  railway.toml
.github/workflows/: deploy.yaml  linting.yaml  testing.yaml
app/: main.py
app/api/v1/: auth.py  health.py
app/api/v1/org/: __init__.py  department.py  employee.py  job.py  position.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  user.py
app/models/org/: __init__.py  department.py  employee.py  employee_event.py  employee_identity.py  job.py  job_history.py  position.py  position_assignment.py
app/schemas/: __init__.py  auth.py  org.py
app/schemas/org/: __init__.py  department.py  employee.py  job.py  position.py
app/services/: auth_service.py
app/services/org/: __init__.py  department_service.py  employee_service.py  job_service.py  position_service.py
migrations/: env.py
migrations/versions/: 0c9975002c0c_model_job.py  1cc553b67fc0_add_employee_status_trigger.py  4ef05a8f5479_org_models.py  f4a2f31eafda_create_users_and_workspaces_tables.py
tests/: conftest.py  test_auth.py  test_security.py
tests/helpers/: schema_assertions.py
tests/integration/: test_database_org_schema.py  test_database_schema.py  test_migrations.py
tests/integration/endpoints/: test_department.py  test_health.py  test_jobs.py  test_position.py
tests/unit/: test_department_model.py  test_job_model.py  test_org_models.py
