[project]
name = "survey-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi[standard]>=0.135.3",

    # Config
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
]

[dependency-groups]
dev = ["mypy>=1.20.0", "pre-commit>=4.5.1", "ruff>=0.15.9"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".venv", "alembic/versions", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008", # do not perform function calls in default args (FastAPI depende disso)
    "E501", # line too long — deixa o formatter cuidar
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/"]

disallow_untyped_decorators = false # decorators do FastAPI/SQLAlchemy
